[tool.poetry]
name = "imagesort-sorter"
version = "0.1.0"
description = "Get sort key for image and pass request to dumper for image processing."
authors = ["Marek Beno <marek.beno.private@gmail.com>"]
readme = "README.md"
packages = [
    {include = "sorter", from="src"}
]

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^8.2.5"
opencv-python = "^4.6.0.66"
webcolors = "^1.12"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mypy = "^0.10.0"
pytest-pylint = "^0.19.0"
poethepoet = "^0.16.4"
black = "22.10.0"
isort = "^5.9.1"

[tool.poetry.scripts]
sorter = "sorter.__main__:main"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format-code = ["_isort", "_black"]

[tool.pytest.ini_options]
addopts = "--verbose --pylint --pylint-rcfile=pyproject.toml --cov=. --cov-report=html"

[tool.pylint.master]
good-names = "logger,i,j,k"
max-line-length=119

[tool.pylint.messages_control]
disable = """,
    missing-function-docstring,
    missing-class-docstring,
    missing-module-docstring,
    duplicate-code
    """

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"